--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 <title>立て替え入力</title>
 <meta name="theme-color" content="#f6f4ef" />
 
+  <!-- iPhone ホーム画面用 -->
+<link rel="apple-touch-icon" href="./apple-touch-icon.svg">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="apple-mobile-web-app-title" content="立て替え入力">
+  
 <style>
   :root{
     --bg:#f6f4ef;
